--- a/dashboard.html
+++ b/dashboard.html
@@ -470,10 +470,12 @@
 
         // Buscar dados da API
         async function fetchEvents(page) {
+            console.log(`Buscando página ${page}...`);
             try {
                 const response = await fetch(`https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=${page}`);
                 const data = await response.json();
-                return data.data;
+                console.log(`Dados recebidos da página ${page}:`, data.data);
+                return data.data || [];
             } catch (error) {
                 console.error(`Erro ao buscar página ${page}:`, error);
                 return [];
@@ -482,6 +484,7 @@
 
         // Processar estatísticas dos jogadores
         function processPlayerStats(events, gamesLimit) {
+            console.log(`Processando estatísticas com ${gamesLimit} jogos...`);
             const stats = {};
             events.forEach(event => {
                 const [homeGoals, awayGoals] = event.score.split('-').map(Number);
@@ -517,6 +520,7 @@
                 player.goalsFT = player.games.reduce((sum, g) => sum + parseInt(g.score.split('-')[0]) + parseInt(g.score.split('-')[1]), 0) / player.games.length || 0;
             });
 
+            console.log('Estatísticas processadas:', stats);
             return stats;
         }
 
@@ -527,14 +531,15 @@
                 const [home, away] = event.score.split('-').map(Number);
                 return sum + home + away;
             }, 0);
-            const avgGoalsFT = totalGoals / totalGames || 0;
-            const avgWins = Object.values(playerStats).reduce((sum, p) => sum + p.wins, 0) / Object.keys(playerStats).length || 0;
+            const avgGoalsFT = totalGames ? totalGoals / totalGames : 0;
+            const avgWins = Object.keys(playerStats).length ? Object.values(playerStats).reduce((sum, p) => sum + p.wins, 0) / Object.keys(playerStats).length : 0;
 
             document.getElementById('quickStats').innerHTML = `
                 <div class="stat-card"><h3>Jogos</h3><div class="stat-value">${totalGames}</div></div>
                 <div class="stat-card"><h3>Média Gols FT</h3><div class="stat-value">${avgGoalsFT.toFixed(2)}</div></div>
                 <div class="stat-card"><h3>Média Vitórias</h3><div class="stat-value">${avgWins.toFixed(1)}</div></div>
             `;
+            console.log('Estatísticas rápidas atualizadas');
         }
 
         // Atualizar gráfico com filtros
@@ -542,6 +547,7 @@
             let filteredEvents = events;
             if (leagueFilter !== 'all') {
                 filteredEvents = events.filter(event => event.leagueID === leagueFilter);
+                console.log(`Filtrando gráfico para liga ${leagueFilter}:`, filteredEvents);
             }
 
             const goalsDist = [0, 0, 0, 0, 0, 0]; // 0, 1, 2, 3, 4, 5+
@@ -574,6 +580,7 @@
                     plugins: { legend: { labels: { color: 'var(--text-primary)' } } }
                 }
             });
+            console.log('Gráfico atualizado com distribuição:', goalsDist);
         }
 
         // Atualizar cards dos jogadores
@@ -627,6 +634,7 @@
                 `;
                 container.appendChild(card);
             });
+            console.log('Cards dos jogadores atualizados');
         }
 
         // Preencher filtro de ligas
@@ -641,6 +649,7 @@
                 option.textContent = name;
                 select.appendChild(option);
             });
+            console.log('Filtro de ligas preenchido:', leagues);
         }
 
         // Mostrar notificação de atalho
@@ -649,11 +658,14 @@
             indicator.textContent = message;
             indicator.classList.add('active');
             setTimeout(() => indicator.classList.remove('active'), 2000);
+            console.log(`Notificação exibida: ${message}`);
         }
 
         // Atualizar dashboard
         async function updateDashboard(showRecommendedOnly = false) {
+            console.log('Atualizando dashboard...');
             eventsData = await fetchEvents(currentPage);
+            if (eventsData.length === 0) console.warn('Nenhum dado retornado da API');
             document.getElementById('pageIndicator').textContent = `Página ${currentPage}`;
             const gamesLimit = parseInt(document.getElementById('gamesFilter').value);
             const leagueFilter = document.getElementById('leagueFilter').value;
@@ -664,6 +676,7 @@
             updateQuickStats(eventsData);
             updateGoalsChart(eventsData, leagueFilter);
             updatePlayerCards(playerStats, leagueFilter, sortBy, showRecommendedOnly);
+            console.log('Dashboard atualizado com sucesso');
         }
 
         // Resetar filtros e página
@@ -674,54 +687,70 @@
             document.getElementById('sortBy').value = 'goalsFT';
             updateDashboard();
             showShortcutNotification('Filtros resetados');
+            console.log('Filtros resetados');
         }
 
         // Inicializar
-        document.addEventListener('DOMContentLoaded', async () => {
-            await updateDashboard();
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log('Inicializando dashboard...');
+            updateDashboard();
 
             // Filtros e botões
             document.getElementById('refreshData').addEventListener('click', () => {
                 updateDashboard();
                 showShortcutNotification('Dados atualizados');
             });
-            document.getElementById('gamesFilter').addEventListener('change', updateDashboard);
-            document.getElementById('leagueFilter').addEventListener('change', updateDashboard);
-            document.getElementById('sortBy').addEventListener('change', updateDashboard);
+            document.getElementById('gamesFilter').addEventListener('change', () => {
+                console.log('Filtro de jogos alterado para:', document.getElementById('gamesFilter').value);
+                updateDashboard();
+            });
+            document.getElementById('leagueFilter').addEventListener('change', () => {
+                console.log('Filtro de liga alterado para:', document.getElementById('leagueFilter').value);
+                updateDashboard();
+            });
+            document.getElementById('sortBy').addEventListener('change', () => {
+                console.log('Ordenação alterada para:', document.getElementById('sortBy').value);
+                updateDashboard();
+            });
             document.getElementById('prevPage').addEventListener('click', () => {
                 if (currentPage > 1) {
                     currentPage--;
                     updateDashboard();
+                    console.log('Página anterior:', currentPage);
                 }
             });
             document.getElementById('nextPage').addEventListener('click', () => {
                 currentPage++;
                 updateDashboard();
+                console.log('Próxima página:', currentPage);
             });
             document.getElementById('resetFilters').addEventListener('click', resetFilters);
 
             // Atalhos de teclado
-            document.addEventListener('keydown', async (e) => {
-                const key = e.key.toLowerCase();
-                if (e.key === 'F5') { // F5 é tratado separadamente
+            document.addEventListener('keydown', (e) => {
+                console.log(`Tecla pressionada: ${e.key}`);
+                if (e.key === 'F5') {
                     e.preventDefault();
-                    await updateDashboard();
+                    updateDashboard();
                     showShortcutNotification('Dados atualizados (F5)');
-                } else if (key === 'g') {
-                    document.getElementById('sortBy').value = 'goalsFT';
-                    await updateDashboard();
-                    showShortcutNotification('Ordenado por Gols FT (G)');
-                } else if (key === 'v') {
-                    document.getElementById('sortBy').value = 'wins';
-                    await updateDashboard();
-                    showShortcutNotification('Ordenado por Vitórias (V)');
-                } else if (key === 'r') {
-                    await updateDashboard(true);
-                    showShortcutNotification('Mostrando Recomendados (R)');
+                } else {
+                    const key = e.key.toLowerCase();
+                    if (key === 'g') {
+                        document.getElementById('sortBy').value = 'goalsFT';
+                        updateDashboard();
+                        showShortcutNotification('Ordenado por Gols FT (G)');
+                    } else if (key === 'v') {
+                        document.getElementById('sortBy').value = 'wins';
+                        updateDashboard();
+                        showShortcutNotification('Ordenado por Vitórias (V)');
+                    } else if (key === 'r') {
+                        updateDashboard(true);
+                        showShortcutNotification('Mostrando Recomendados (R)');
+                    }
                 }
             });
 
-            // Navegação da sidebar (futuramente substituir por URLs reais)
+            // Navegação da sidebar
             document.querySelectorAll('.sidebar nav a').forEach(link => {
                 link.addEventListener('click', (e) => {
                     e.preventDefault();
